<resources>
    <string name="app_name">Do It Daily</string>
    <string name="button">button</string>
    <string name="seize_the_day">Seize the day</string>
    <string name="date">Date</string>
    <string name="wake_up">Wake Up</string>
    <string name="breakfast">Breakfast</string>
    <string name="morning_routine">Start your morning routine</string>
    <string name="afternoon_routine">Start your afternoon routine</string>
    <string name="evening_routine">Start your evening routine</string>
    <string name="ootd"> Outfit of the day </string>

    <string name="mRoutine"> Morning routine </string>
    <string name="aRoutine"> Afternoon routine </string>
    <string name="eRoutine"> Evening routine </string>
    <string name="eRoutine_example"> e.g, Make dinner </string>
    <string name="mRoutine_example"> e.g, Make breakfast </string>
    <string name="aRoutine_example"> e.g, Make lunch </string>
    <string name="set_time"> Set Time</string>
    <string name="minute_hint">Enter a number: e.g, 20</string>
    <string name="set_minutes"> Set Minutes</string>
    <string name="habit_completed">  completed. Well done!</string>
    <string name="set"> Set </string>

    <string name="breathe">Breathe</string>
    <string name="start">START</string>
    <string name="breathe_info_1">Meditation for at least 10 minutes everyday can increase self awareness, focus and reduce negative emotions.
    </string>
    <string name="breathe_info_2">The timer is automatically set to 10 minutes and the animation shows to inhale when it becomes smaller and exhale when it returns back to the normal size.
    </string>
    <string name="breathe_info_3">If you want to increase the time simply press start again and meditate for another 10 minutes.
    </string>

    <string name="manifest">Manifest</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="title_add">Add title</string>
    <string name="description_add">Add description</string>
    <string name="image_add">Add image</string>
    <string name="image">Image</string>
    <string name="add_manifest">Add Manifest</string>
    <string name="success">Success</string>
    <string name="failure">Insert Failed</string>
    <string name="set_permissions"><![CDATA[Go to Settings -> Apps and Notifications -> Daily Not Dilly\" +                     \"-> App Permissions and grant access to storage]]></string>

    <!--    To do feature strings -->
    <string name="To_do">TO DO</string>
    <string name="enter_todo_hint">e.g., Water the plants</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>
    <string name="this_weekend">This Weekend</string>
    <string name="radio_high">High</string>
    <string name="empty_task">Empty To Do</string>
    <string name="due_date">Due Date</string>
    <string name="radio_medium">Medium</string>
    <string name="radio_low">Low</string>
    <string name="image_description">button image</string>
    <string name="add_todos">Add a To-do…</string>

    <string name="recipes"> Recipes </string>
    <string name="search_recipes">Search for recipes</string>
    <string name="recipe_make">What would you like to make?</string>
    <string name="recipe_hint">e.g, Pesto pasta</string>
    <string name="ingredients_make">Add any ingredients:</string>
    <string name="ingredients_hint">e.g, tomato, basil, etc.</string>

    <string name="morning_hint">It is best it you wake up at the same time everyday. However, to increase your productivity it is recommended to wake up around 5 AM.</string>
    <string name="morning_hint_2"> The best time to be productive is between the hours of 9 to 11 AM.</string>
    <string name="afternoon_hint"> Workouts between 1 to 4 PM after lunch can you an energy boost.</string>
    <string name="evening_hint"> It is best to go to bed at the same time everyday. A session of yoga before bed can increase the quality of sleep.</string>

    <string-array name="quotes">

        <item>Dont worry about what anybody else is going to do. The best way to
        predict the future is to invent it.
         </item>

        <item> It is said that the real winner is the one who lives in today but able to see tomorrow.
        </item>

        <item>There really is no learning without doing.
        </item>

        <item> The best way to learn to live with our limitations is to know them.
         </item>

        <item>Everything should be made as simple as possible, but no simpler.
        </item>

        <item>The great dividing line between success and failure can be expressed in five words: I did not have time.
        </item>

        <item>He causes his sun to rise on the evil and the good, and sends rain on the righteous and the unrighteous.
        </item>

        <item>Everybody makes their own fun. If you dont make it yourself, it aint fun — its entertainment.
        </item>

        <item>Simplicity takes effort — genius, even.
        </item>

        <item> Show, dont tell.
        </item>

        <item>If you choose not to decide, you still have made a choice.
        </item>

        <item>The function of wisdom is to discriminate between good and evil.
        </item>

        <item>Life moves pretty fast. If you dont stop and look around once in a while, you could miss it.
        </item>

        <item>The direct pursuit of happiness is a recipe for an unhappy life.
        </item>

        <item>Its no trick for talented people to be interesting, but it is a gift to be interested.
        </item>

        <item>For the things we have to learn before we can do them, we learn by doing them.
        </item>

        <item>There are many ways to avoid success in life, but the worst of them might be procrastination.
        </item>

        <item>When all you have is a hammer, everything looks like a nail.
        </item>

        <item>If there is a will, there is a way.
        </item>

        <item>In terms of energy, its better to make a wrong choice than none at all.
        </item>

        <item>Courage is grace under pressure.
        </item>

        <item> Satisfaction lies in mindful repetition, the discovery of endless richness in subtle variations on familiar themes.
        </item>

        <item>Before enlightenment, chop wood and carry water. After enlightenment, chop wood and carry water.
        </item>

        <item> Whatever you can do, or dream you can, begin it. Boldness has genius, power, and magic in it.
        </item>


    </string-array>
    <string name="title_activity_timer">TimerActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>