<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/info_window"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@color/transparent_white"
    android:layout_gravity="center"
    android:gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_white"
            android:layout_gravity="center"
            app:cardCornerRadius="50dp"
            android:padding="10dp"
            app:strokeWidth="3dp"
            app:strokeColor="@color/blue">

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent_white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding = "5dp"
                    android:text="@string/breathe_info_1"
                    android:textSize="20sp"
                    android:textColor="@color/green">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding = "5dp"
                    android:text="@string/breathe_info_2"
                    android:textSize="20sp"
                    android:textColor="@color/green">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding = "5dp"
                    android:text="@string/breathe_info_3"
                    android:textSize="20sp"
                    android:textColor="@color/green">

                </TextView>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

