<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AddManifestActivity">


        <com.google.android.material.card.MaterialCardView
            app:cardElevation="4dp"
            android:layout_marginTop="5dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="20dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_image_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="15dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/white"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/image_add"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    >
                </com.google.android.material.button.MaterialButton>

                <ImageView
                    android:id="@+id/manifest_add_image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="20dp">

                </ImageView>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            app:cardElevation="4dp"
            android:layout_marginTop="5dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="20dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:paddingVertical="15dp"
                    android:paddingHorizontal="10dp"
                    android:layout_alignParentStart="true"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textAllCaps="true"
                    android:text="@string/title"
                    android:layout_height="wrap_content">

                </TextView>

                <EditText
                    android:id="@+id/add_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@id/title"
                    android:padding="15dp"
                    android:hint="@string/title_add"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/black"
                    android:textSize="25sp">

                </EditText>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            app:cardElevation="4dp"
            android:layout_marginTop="2dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="15dp"
                    android:paddingHorizontal="10dp"
                    android:layout_alignParentStart="true"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textSize="25sp"
                    android:text="@string/description">

                </TextView>

                <EditText
                    android:id="@+id/add_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@id/description"
                    android:textColorLink="@color/green"
                    android:padding="15dp"
                    android:hint="@string/description_add"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/black"
                    android:textSize="25sp">

                </EditText>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            app:cardElevation="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_manifest_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/green"
                android:text="@string/add_manifest"
                android:textSize="25sp"
                android:textColor="@color/white"
                >

            </com.google.android.material.button.MaterialButton>

        </com.google.android.material.card.MaterialCardView>


</LinearLayout>