<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:behavior_hideable="false"
    app:behavior_peekHeight="32dp"
    android:id="@+id/morning_bottom_sheet_fragment"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <EditText
        android:id="@+id/enter_morning_habit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/mRoutine_example"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </EditText>

    <ImageButton
        android:id="@+id/morning_time_button"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/image_description"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_morning_habit"
        app:srcCompat="@drawable/ic_clock" />

    <ImageButton
        android:id="@+id/morning_minute_button"
        android:layout_width="77dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@+id/morning_time_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_morning_habit"
        app:srcCompat="@drawable/ic_alarm"
        android:contentDescription="@string/image_description" />

    <ImageButton
        android:id="@+id/save_mHabit_button"
        android:layout_width="77dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toEndOf="@+id/morning_minute_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_morning_habit"
        app:srcCompat="@drawable/ic_add_task"
        android:contentDescription="@string/eRoutine" />

    <TextView
        android:id="@+id/morning_textview"
        android:layout_width="244dp"
        android:layout_height="33dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/set_time"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_mHabit_button">

    </TextView>

    <TimePicker
        android:id="@+id/morning_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/morning_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:timePickerMode="spinner"
        >

    </TimePicker>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/morning_time_group"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="morning_time_picker,morning_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/morning_minute_tv"
        android:layout_width="244dp"
        android:layout_height="33dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/set_minutes"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/morning_time_picker">

    </TextView>

    <NumberPicker
        android:id="@+id/set_morning_minute_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/morning_minute_tv">
    </NumberPicker>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/morning_minute_group"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="morning_minute_tv,set_morning_minute_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>